--- a/Game_to_Dataframe.ipynb
+++ b/Game_to_Dataframe.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "71a67d0e",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import json"
+    "import json\n",
+    "from datetime import datetime"
    ]
   },
   {
@@ -17,93 +18,83 @@
    "id": "158f8232",
    "metadata": {},
    "source": [
-    "### 게임 결과 데이터 프레임 만들기\n",
+    "## 게임 결과 데이터 프레임 만들기\n",
+    "\n",
+    "\n",
+    "입력해야 할 것 : API에서 추출한 게임 결과 데이터(df), 현재 게임 버젼(version), 라이엇에서 제공하는 data_dragon\n",
+    "\n",
+    "\n",
+    "### object 설명\n",
+    "\n",
+    "1. df : 데이터프레임\n",
+    "\n",
+    "2. version : 게임 버전\n",
+    "\n",
+    "3. data_dragon : data dragon\n",
+    "\n",
+    "4. item_data : data dragon에서 추출한 아이템, 증강체 정보\n",
+    "\n",
+    "5. champ : data dragon에서 추출한 유닛 정보\n",
+    "\n",
+    "6. game_id : 해당 게임 아이디\n",
+    "\n",
+    "7. game_result : 해당 게임 결과\n",
+    "\n",
+    "8. trait_language : 특성 한/영 변환 정보 - 해당 정보는 data dragon에 존재해서, 추후 수정 예정\n",
+    "\n",
+    "9. champ_language : 유닛 한/영 변환 정보\n",
+    "\n",
+    "19. date : 해당 게임 일자\n",
     "\n",
     "\n",
     "\n",
+    "### 함수 설명\n",
     "\n",
-    "1. MatchDto\n",
+    "* change_augment_name : 증강체 이름을 수정해서, game_result dataframe에 augment1, augment2, augment3 column으로 생성해주는 함수\n",
     "\n",
-    "게임 정보입니다. Info와 metadata로 구성됩니다.\n",
+    "* make_trait_dataframe(traits) : game_result의 traits column에 속한 element를 입력, 해당 유저의 경기 결과 중 특성 정보 제공해주는 함수\n",
     "\n",
-    "1) metadata\n",
-    "\n",
-    "해당 게임 버전과 참가자 아이디를 나타내줍니다.\n",
-    "\n",
-    "data_version : 해당 게임 시즌\n",
-    "\n",
-    "match_id : match id\n",
-    "\n",
-    "participants : 참가자 puuid\n",
-    "\n",
-    "2) Info\n",
-    "\n",
-    "게임 세부정보입니다. \n",
+    "* change_language_trait(traits) : make_trait_dataframe로 만든 데이터프레임을 입력, 특성 정보를 한/영 변환해주는 함수\n",
     "\n",
     "\n",
-    "game_datetime : 해당 match 시작 시간, Unix timestamp으로 결과 제공\n",
+    "* make_unit_dataframe(unit) : game_result의 units columns에 속한 element를 입력, 해당 유저의 경기 결과 중 유닛 정보 제공해주는 함수 (유닛 id, 유닛 이름, 유닛 코스트, 유닛 성수, 착용아이템1, 착용아이템2, 착용아이템3), 한영 변환까지 진행한 결과를 제공해줍니다.\n",
     "\n",
-    "game_length : 해당 match 끝날 때까지의 시간, 단위 : 초\n",
+    "* make_trait_result(number) : number에 해당하는 플레이어의 특성 종합 정보를 제공해주는 함수\n",
     "\n",
-    "game_version : 해당 match의 게임 version\n",
-    "\n",
-    "game_variation : 해당 match에서의 게임 변화\n",
-    "\n",
-    "participant : 게임 세부 정보, 참가자마다의 순위 결정시의 정보 제공\n",
+    "* make_unit_result(number) : number에 해당하는 플레이어의 유닛 종합 정보를 제공해주는 함수\n",
     "\n",
     "\n",
-    "2-1) Participant\n",
+    "* make_new_game_result : 해당 경기 데이터를 데이터프레임으로 정리해주는 함수. 결과 데이터프레임은 다음과 같습니다.\n",
     "\n",
-    "augment : 증강체\n",
-    "\n",
-    "companion : 전략가 정보(기물을 다루는 캐릭터) - content_id(전략가 이름), skin_id(스킨id), species(전략가 캐릭터 이름)으로 구성\n",
-    "\n",
-    "gold_left : 게임을 끝마쳤을 때 남은 골드\n",
-    "\n",
-    "last_round : 게임을 끝마쳤을 때의 라운드(ex:2-1라운드에 패배시 5)\n",
-    "\n",
-    "level : 게임을 끝마쳤을 때의 level\n",
-    "\n",
-    "players_eliminated : 자신이 죽인 플레이어 수\n",
-    "\n",
-    "puuid : 해당 유저의 puuid\n",
-    "\n",
-    "time_eliminated : 해당 유저가 패배할 때까지의 시간\n",
-    "\n",
-    "total_damage_to_players : 해당 유저가 다른 유저에게 가한 피해량 총합\n",
-    "\n",
-    "traits : 해당 유저 덱의 시너지 효과 정보\n",
-    "\n",
-    "units : 해당 유저 덱의 유닛 정보\n",
+    "    1. Datetime : 해당 게임 플레이 일자.\n",
+    "    2. Game_id : 해당 게임 id\n",
+    "    3. Player_id : player 정보를 puuid로 제공\n",
+    "    4. Placement : 등수,\n",
+    "    5. Time : 해당 게임 플레이 시간.\n",
+    "    6. Last_round : 게임이 끝났을 때의 마지막 라운드.\n",
+    "    7. Damage_player : 해당 유저가 다른 유저에게 가한 데미지. \n",
+    "    8. Gold_left : 게임이 끝났을 때 남은 골드\n",
+    "    9. augment1, augment2, augment3 : 증강체. 각각 2-1, 3-2, 4-2에 선택한 증강체\n",
+    "    10. traits : 최종 조합 특성 정보\n",
+    "        10-1. num_units : 해당 특성을 가진 유닛 수. list로 존재하며, traits에 속하는 list 길이와 같습니다.\n",
+    "        10-2. tier_current : 현재 티어 레벨. list로 존재하며, traits에 속하는 list 길이와 같습니다.\n",
+    "    11. units : 최종 조합 유닛 정보\n",
+    "        11-1. unit_tier : 해당 유닛의 성(star)수. list로 존재하며, units에 속하는 list 길이와 같습니다.\n",
+    "        11-2. item_name : 해당 유닛이 착용한 아이템. list로 존재하며, units에 속한 list 길이와 같습니다.\n",
     "\n",
     "\n",
-    "2-1-1) Traits\n",
+    "    traits에 관련된 column에 대한 해석은 다음과 같습니다.\n",
     "\n",
-    "name : 시너지 이름\n",
-    "\n",
-    "num_units : 덱에 해당 시너지를 가진 유닛 수\n",
-    "\n",
-    "style : 시너지 스타일(0=시너지 없음, 1=브론즈 시너지, 2=실버 시너지, 3=골드 시너지, 4=크로마틱 시너지)\n",
-    "\n",
-    "tier_current : 활성화된 시너지 티어 \n",
-    "\n",
-    "tier_total : 해당 시너지 총 티어\n",
+    "        * traits column은 해당 유저가 사용한 특성 이름이 차례대로 나열된 list가 삽입된다.\n",
+    "        * traits column에 속한 특성 list의 i번째 특성에 해당하는 유닛 수는 num_units에 속한 list의 i번 째 element가 된다.\n",
+    "        * traits column 에 속한 특성 list의 i번째 특성에 해당하는 특성 티어는 tier_current에 속한 list의 i번 째 element가 된다.\n",
     "\n",
     "\n",
+    "    units에 관련된 column에 대한 해석은 다음과 같습니다.\n",
     "\n",
-    "2-1-2) Units\n",
-    "\n",
-    "items : 해당 유닛이 가지고 있는 아이템 (list로 제공)\n",
-    "\n",
-    "character_id : 유닛 이름\n",
-    "\n",
-    "chosen : If a unit is chosen as part of the Fates set mechanic, the chosen trait will be indicated by this field. Otherwise this field is excluded from the response.\n",
-    "\n",
-    "name : 유닛 이름, 대부분 빈칸\n",
-    "\n",
-    "rarity : 유닛 희귀도, unit cost와 다름\n",
-    "\n",
-    "tier : 유닛 tier\n"
+    "        * units column은 해당 유저가 사용한 유닛의 이름이 차례대로 나열된 list가 삽입된다.\n",
+    "        * units column에 속한 유닛 list의 i번 째 유닛의 성(star)수는 unit_tier에 속한 list의 i번 째 element가 된다.\n",
+    "        * units column에 속한 유닛 list의 i번 째 유닛이 착용한 아이템은 item_name에 속한 list의 i번 째 element가 된다.(이 때, i번 째 element는 길이가 3인 리스트이다.)"
    ]
   },
   {
@@ -121,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "0474526b",
    "metadata": {},
    "outputs": [],
@@ -150,7 +141,7 @@
     "                                                 'Set8_Renegade', 'Set8_Channeler', 'Set8_Recon', 'Set8_Deadeye', 'Set8_Defender',\n",
     "                                                'Set8_GenAE', 'Set8_Hacker']})\n",
     "        self.champ_language = {self.champ.apiName[i] : self.champ.name[i] for i in range(self.champ.shape[0])}\n",
-    "        \n",
+    "        self.date= str(datetime.fromtimestamp(int(self.df['info']['game_datetime'])/1000)).split(' ')[0]\n",
     "        \n",
     "    # 증강체 한글 변환\n",
     "    \n",
@@ -167,10 +158,24 @@
     "\n",
     "                change_augment = self.item_data.loc[self.item_data.apiName == augment, 'name'].values[0]\n",
     "                change_result.append(change_augment)\n",
+    "            \n",
+    "            length_change_result = len(change_result)\n",
+    "            \n",
+    "            if length_change_result<3:\n",
+    "                \n",
+    "                change_result = change_result + ['None']*(3-length_change_result)\n",
     "\n",
     "            change_results.append(change_result)\n",
+    "            \n",
+    "            \n",
+    "        change_results = pd.DataFrame(change_results, columns=['augment1', 'augment2', 'augment3'])\n",
+    "        \n",
+    "        \n",
     "\n",
-    "        self.game_result.augments = change_results\n",
+    "        self.game_result[['augment1', 'augment2', 'augment3']] = change_results\n",
+    "        self.game_result = self.game_result[['game_id', 'puuid', 'placement', 'level', 'gold_left',\n",
+    "                                            'last_round', 'time_eliminated', 'total_damage_to_players',\n",
+    "                                             'augment1', 'augment2', 'augment3', 'traits', 'units']]\n",
     "\n",
     "        return self.game_result\n",
     "    \n",
@@ -181,6 +186,9 @@
     "    def make_trait_dataframe(self,trait):\n",
     "    \n",
     "        trait = pd.DataFrame(trait)\n",
+    "        \n",
+    "        if trait.shape[0]==0:\n",
+    "            return pd.DataFrame(columns = ['name', 'num_units', 'tier_current', 'tier_total'])\n",
     "\n",
     "        trait = trait[trait.tier_current!=0].drop(['style'], axis=1).reset_index(drop=True)\n",
     "\n",
@@ -193,8 +201,13 @@
     "        name = []\n",
     "\n",
     "        for i in trait['name']:\n",
-    "            change_name = self.trait_language.loc[self.trait_language['English']==i, 'Korean'].values[0]\n",
-    "            name.append(change_name)\n",
+    "            change_name = self.trait_language.loc[self.trait_language['English']==i, 'Korean'].values\n",
+    "            \n",
+    "            if len(change_name)==0:\n",
+    "                name.append('None')\n",
+    "            else:\n",
+    "                \n",
+    "                name.append(change_name[0])\n",
     "\n",
     "        trait['name_kor'] = name\n",
     "    \n",
@@ -207,13 +220,16 @@
     "    \n",
     "        units = pd.DataFrame(unit)\n",
     "        \n",
+    "        if units.shape[0]==0:\n",
+    "            return pd.DataFrame(columns = ['character_id', 'champ_name', 'rarity', 'tier', 'items', 'item1', 'item2', 'item3'])\n",
+    "        \n",
     "\n",
     "        item_list = []\n",
     "        champ_name = []\n",
     "        for i in range(len(units['character_id'])):\n",
     "            \n",
     "            champ_name.append(self.champ_language[units['character_id'][i]])\n",
-    "            check = units['items'][i]\n",
+    "            check = units['itemNames'][i]\n",
     "\n",
     "            check += [0]*(3-len(check))\n",
     "\n",
@@ -221,7 +237,9 @@
     "\n",
     "        units['items'] = item_list\n",
     "\n",
-    "        item_name = []\n",
+    "        item1 = []\n",
+    "        item2 = []\n",
+    "        item3 = []\n",
     "\n",
     "        for item in item_list:\n",
     "\n",
@@ -231,14 +249,18 @@
     "                if i==0:\n",
     "                    check_item.append('None')\n",
     "                else:\n",
-    "                    item_kor = self.item_data.loc[self.item_data.id==i, 'name'].values[0]\n",
+    "                    item_kor = self.item_data.loc[self.item_data.apiName==i, 'name'].values[0]\n",
     "                    check_item.append(item_kor)\n",
-    "            item_name.append(check_item)\n",
+    "            item1.append(check_item[0])\n",
+    "            item2.append(check_item[1])\n",
+    "            item3.append(check_item[2])\n",
     "\n",
     "\n",
     "        units = pd.DataFrame(unit).drop(['itemNames', 'name'], axis=1)\n",
     "\n",
-    "        units['item_name'] = item_name\n",
+    "        units['item1'] = item1\n",
+    "        units['item2'] = item2\n",
+    "        units['item3'] = item3\n",
     "        units.character_id = list(map(lambda x: x.replace(self.version, ''), units.character_id))\n",
     "        units['champ_name'] = champ_name\n",
     "\n",
@@ -251,14 +273,17 @@
     "    def make_new_game_result(self):\n",
     "    \n",
     "\n",
-    "        New_result = {'Game_id' : self.df['metadata']['match_id'],\n",
+    "        New_result = {'Datetime' : self.date,\n",
+    "            'Game_id' : self.df['metadata']['match_id'],\n",
     "                      'Player_id' : [],\n",
     "                 'Placement' : [], \n",
     "                 'Time' : [],\n",
     "                 'Last_round' : [],\n",
     "                 \"Damage_player\" : [],\n",
     "                 \"Gold_left\" : [],\n",
-    "                 \"augments\" : [],\n",
+    "                 \"augment1\" : [],\n",
+    "                  'augment2' : [],\n",
+    "                  'augment3' : [],\n",
     "                 \"traits\" : [],\n",
     "                 \"num_units\" : [],\n",
     "                 \"tier_current\" : [],\n",
@@ -278,10 +303,17 @@
     "\n",
     "        New_result['Gold_left']+=(list(self.game_result.gold_left))\n",
     "\n",
-    "        New_result['augments'] += list(self.game_result.augments)\n",
+    "        New_result['augment1'] += list(self.game_result.augment1)\n",
+    "        \n",
+    "        New_result['augment2'] += list(self.game_result.augment2)\n",
     "\n",
+    "        New_result['augment3'] += list(self.game_result.augment3)\n",
+    "        \n",
+    "        \n",
     "\n",
     "        for player in range(self.game_result.shape[0]):\n",
+    "            \n",
+    "\n",
     "\n",
     "            trait_dataframe = pd.DataFrame(self.game_result.loc[player, 'traits'])\n",
     "            trait_dataframe = self.make_trait_dataframe(trait_dataframe)\n",
@@ -292,11 +324,13 @@
     "            New_result['tier_current'].append(list(trait_dataframe.tier_current))\n",
     "\n",
     "\n",
+    "                \n",
     "            unit_dataframe =  self.make_unit_dataframe(self.game_result.loc[player, 'units'])\n",
+    "            \n",
     "\n",
     "            New_result['units'].append(list(unit_dataframe.champ_name))\n",
     "            New_result['unit_tier'].append(list(unit_dataframe.tier))\n",
-    "            New_result['item_name'].append(list(unit_dataframe.item_name))\n",
+    "            New_result['item_name'].append(np.array(unit_dataframe.loc[:, ['item1', 'item2', 'item3']]).tolist())\n",
     "\n",
     "\n",
     "        New_result = pd.DataFrame(New_result)\n",
@@ -310,9 +344,10 @@
     "        \n",
     "        trait1 = self.make_trait_dataframe(self.game_result.loc[number, 'traits'])\n",
     "        trait1 = self.change_language_trait(trait1)\n",
+    "        trait1['Datetime'] = self.date\n",
     "        trait1['Game_id'] = self.game_id\n",
     "        trait1['Player_id'] = self.game_result.loc[number, 'puuid']\n",
-    "        trait1 = trait1[['Game_id', 'Player_id', 'name', 'num_units', 'tier_current', 'tier_total', 'name_kor']]\n",
+    "        trait1 = trait1[['Datetime', 'Game_id', 'Player_id', 'name', 'num_units', 'tier_current', 'tier_total', 'name_kor']]\n",
     "        \n",
     "        return trait1\n",
     "    \n",
@@ -321,9 +356,10 @@
     "    def make_unit_result(self, number):\n",
     "        \n",
     "        unit1 = self.make_unit_dataframe(self.game_result.loc[number, 'units'])\n",
+    "        unit1['Datetime'] = self.date\n",
     "        unit1['Game_id'] = self.game_id\n",
     "        unit1['Player_id'] = self.game_result.loc[number, 'puuid']\n",
-    "        unit1 = unit1[['Game_id', 'Player_id', 'character_id', 'champ_name', 'items', 'item_name']]\n",
+    "        unit1 = unit1[['Datetime', 'Game_id', 'Player_id', 'character_id', 'champ_name', 'rarity', 'tier', 'item1', 'item2', 'item3']]\n",
     "        return unit1\n",
     "\n"
    ]
@@ -331,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "285959c8",
+   "id": "1ee6c1c0",
    "metadata": {},
    "outputs": [],
    "source": []
