--- a/Game_to_Dataframe.ipynb
+++ b/Game_to_Dataframe.ipynb
@@ -10,7 +10,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import json\n",
-    "from datetime import datetime"
+    "from datetime import datetime",
    ]
   },
   {
