--- a/Basic preprocessing.ipynb
+++ b/Basic preprocessing.ipynb
@@ -1,9 +1,264 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "aaf4bbbd",
+   "metadata": {},
+   "source": [
+    "## 챔피언, 증강체, 아이템 요약 통계량 만들기\n",
+    "\n",
+    "\n",
+    "### 필요한 것\n",
+    "\n",
+    "증강체, 챔피언, 아이템 기본 dataframe\n",
+    "\n",
+    "해당 repo에 augment_list.csv, champion_list.csv, item_list.csv로 존재\n",
+    "\n",
+    "\n",
+    "### 입력 값\n",
+    "\n",
+    "Game_to_Dataframe class를 통해 얻은 게임 결과 dataframe \n",
+    "\n",
+    "    1. game_result : 해당 class 내부 함수 make_new_game_result을 통해 생성된 게임 결과 datafrmae\n",
+    "    \n",
+    "    2. unit_result : 해당 class 내부 함수 make_unit_result을 통해 생성된 챔피언 dataframe\n",
+    "\n",
+    "\n",
+    "### object 설명\n",
+    "\n",
+    "1. game_result : 경기 결과 dataframe\n",
+    "\n",
+    "2. unit_result : 게임 결과 중 champion 결과만 정리한 dataframe\n",
+    "\n",
+    "3. augment_result : augment_list\n",
+    "\n",
+    "4. champion_result : champion_list\n",
+    "\n",
+    "5. item_result : item_list\n",
+    "\n",
+    "6. after_join : game_result와 unit_result을 join 후 요약 통계에 필요한 column만 남긴 dataframe\n",
+    "\n",
+    "    1) Datetime : 해당 게임 play 날짜\n",
+    "\n",
+    "    2) Game_id : 해당 게임 id\n",
+    "\n",
+    "    3) Player_id : 해당 플레이어 id\n",
+    "\n",
+    "    4) Placement : 해당 게임 등수\n",
+    "\n",
+    "    5) augment1 : 해당 플레이어가 첫 번째로 선택한 증강체\n",
+    "\n",
+    "    6) augment2 : 해당 플레이어가 두 번째로 선택한 증강체\n",
+    "\n",
+    "    7) augment2 : 해당 플레이어가 세 번째로 선택한 증강체\n",
+    "\n",
+    "    8) champ_name : 해당 챔피언 이름\n",
+    "\n",
+    "    9) rarity : 해당 챔피언 희귀도(cost와 값은 다르지만, 같은 의미를 지님)\n",
+    "\n",
+    "    10) tier : 해당 챔피언 성(star)수\n",
+    "\n",
+    "    11) item1 : 해당 챔피언이 착용한 item 1\n",
+    "\n",
+    "    12) item2 : 해당 챔피언이 착용한 item 2\n",
+    "\n",
+    "    13) item3 : 해당 챔피언이 착용한 item 3\n",
+    "\n",
+    "    * 아이템 착용하지 않거나 증강체를 선택하지 못하고 게임이 끝난 경우 None으로 표시\n",
+    "\n",
+    "\n",
+    "### 함수 설명\n",
+    "\n",
+    "\n",
+    "* change_gloves_item : after_join dataframe에서 도적의 장갑을 착용한 챔피언의 나머지 두 아이템을 'None'으로 바꿔주는 함수\n",
+    "\n",
+    "\n",
+    "\n",
+    "* check_item_unit_itemver : after_join dataframe에서 champion이 착용한 아이템의 수를 반환해주는 함수\n",
+    "\n",
+    "\n",
+    "\n",
+    "* make_augment_stack(game_result, augment_list) : after_join 데이터를 상대로, 증강체 별 요약 통계량 제공해주는 함수, output dataframe은 다음과 같다.\n",
+    "    \n",
+    "    1) Count : 해당 증강체를 사용한 횟수\n",
+    "\n",
+    "    2) Ave_score : 해당 증강체를 사용한 플레이어의 평균 등수\n",
+    "\n",
+    "    3) Ave_score_save : 해당 증강체를 사용한 플레이어가 순방했을 때의 평균 등수\n",
+    "\n",
+    "    4) Win_count : 해당 증강체를 사용한 플레이어가 승리한 횟수\n",
+    "\n",
+    "    5) Win_rate : 해당 증강체를 사용한 플레이어 중 승리한 플레이어 비율\n",
+    "\n",
+    "    6) Save_count : 해당 증강체를 사용한 플레이어가 순방한 횟수\n",
+    "\n",
+    "    7) Save_rate : 해당 증강체를 사용한 플레이어 중 순방한 플레이어 비율\n",
+    "    \n",
+    "\n",
+    "\n",
+    "<br/>\n",
+    "\n",
+    "* make_unit_stack(game_result, champion_list) : after_join 데이터를 상대로, 챔피언 별 요약 통계량 제공해주는 함수, output dataframe은 다음과 같다.\n",
+    "\n",
+    "    1) Count : 해당 유닛 사용한 회수\n",
+    "\n",
+    "    2) Ave_score : 해당 유닛을 사용한 플레이어의 평균 등수\n",
+    "\n",
+    "    3) Ave_score_save : 해당 유닛을 사용한 플레이어가 순방했을 때의 평균 등수\n",
+    "\n",
+    "    4) Ave_star : 해당 유닛의 평균 성수\n",
+    "\n",
+    "    5) Ave_star_save : 해당 유닛을 사용한 플레이어 중 순방했을 때의 평균 성수\n",
+    "\n",
+    "    6) Ave_star_win : 해당 유닛을 사용한 플레이어 중 승리했을 때의 평균 성수\n",
+    "\n",
+    "    7) Win_count : 해당 유닛을 사용한 플레이어가 승리한 횟수\n",
+    "\n",
+    "    8) Win_rate : 해당 유닛을 사용한 플레이어 중 승리한 플레이어 비율\n",
+    "\n",
+    "    9) Save_count : 해당 유닛을 사용한 플레이어가 순방한 횟수\n",
+    "\n",
+    "    10) Save_rate : 해당 유닛을 사용한 플레이어 중 순방한 플레이어 비율\n",
+    "\n",
+    "    11) Num_items_count : 해당 유닛의 아이템 총 수\n",
+    "\n",
+    "    12) Num_items_avg : 해당 유닛의 아이템 평균 숫자\n",
+    "\n",
+    "    13) Num_items_save : 해당 유닛을 사용한 플레이어가 순방했을 때, 유닛이 가진 아이템 평균 숫자\n",
+    "\n",
+    "    14) Num_items_win : 해당 유닛을 사용한 플레이어가 이겼을 때, 유닛이 가진 아이템 평균 숫자\n",
+    "\n",
+    "    15) Full_items_count : 해당 유닛을 사용한 플레이어 중 해당 유닛에 3개의 아이템을 부여한 횟수\n",
+    "\n",
+    "    16) Full_item_rate : 해당 유닛을 사용한 플레이어 중 해당 유닛에 3개의 아이템을 부여한 비율\n",
+    "\n",
+    "    17) Full_item_save : 해당 유닛을 사용한 플레이어가 순방했을 때, 해당 유닛에 3개의 아이템을 부여한 비율\n",
+    "\n",
+    "    18) Full_item_win : 해당 유닛을 사용한 플레이어가 승리했을 때, 해당 유닛에 3개의 아이템을 부여한 비율\n",
+    "\n",
+    "<br/>\n",
+    "\n",
+    "\n",
+    "\n",
+    "* make_item_stack(game_result, item_lists) : after_join 데이터를 상대로, 아이템 별 요약 통계량 제공해주는 함수, output dataframe은 다음과 같다.\n",
+    "\n",
+    "    1) Count : 해당 아이템을 사용한 플레이어 수\n",
+    "\n",
+    "    2) Ave_score : 해당 아이템을 사용한 플레이어의 평균 등수\n",
+    "\n",
+    "    3) Ave_score_save : 해당 아이템을 사용한 플레이어가 순방했을 때, 평균 등수\n",
+    "\n",
+    "    4) Win_count : 해당 아이템을 사용한 플레이어가 승리한 횟수\n",
+    "\n",
+    "    5) Win_rate : 해당 아이템을 사용한 플레이어 중 승리한 플레이어 비율\n",
+    "\n",
+    "    6) Save_count : 해당 아이템를 사용한 플레이어가 순방한 횟수\n",
+    "\n",
+    "    7) Save_rate : 해당 아이템를 사용한 플레이어 중 순방한 플레이어 비율\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "<br/>\n",
+    "\n",
+    "* augment_augment_crosscheck(augment) : 선택한 증강체를 기준으로, 해당 증강체와 같이 사용한 증강체에 대한 요약 통계량을 제공해주는 함수, make_augment_stack 함수의 output dataframe 형태가 같다.\n",
+    "\n",
+    "\n",
+    "\n",
+    "* augment_champion_crosscheck(augment) : 선택한 증강체를 기준으로, 해당 증강체와 같이 사용한 챔피언에 대한 요약 통계량을 제공해주는 함수, make_champion_stack 함수의 output dataframe 형태가 같다.\n",
+    "\n",
+    "\n",
+    "\n",
+    "* augment_item_crosscheck(item) : 선택한 증강체를 기준으로, 해당 증강체와 같이 사용한 아이템에 대한 요약 통계량을 제공해주는 함수, make_item_stack 함수의 output dataframe 형태가 같다.\n",
+    "\n",
+    "<br/>\n",
+    "\n",
+    "\n",
+    "* champion_augment_crosscheck(augment) : 선택한 챔피언을 기준으로, 해당 챔피언과 같이 사용한 증강체에 대한 요약 통계량을 제공해주는 함수, make_augment_stack 함수의 output dataframe 형태가 같다.\n",
+    "\n",
+    "\n",
+    "\n",
+    "* champion_champion_crosscheck(augment) : 선택한 챔피언을 기준으로, 해당 챔피언과 같이 사용한 챔피언에 대한 요약 통계량을 제공해주는 함수, make_champion_stack 함수의 output dataframe 형태가 같다.\n",
+    "\n",
+    "\n",
+    "\n",
+    "* champion_item_crosscheck(item) : 선택한 챔피언을 기준으로, 해당 챔피언과 같이 사용한 아이템에 대한 요약 통계량을 제공해주는 함수, make_item_stack 함수의 output dataframe 형태가 같다.\n",
+    "\n",
+    "<br/>\n",
+    "\n",
+    "\n",
+    "* item_augment_crosscheck(augment) : 선택한 아이템을 기준으로, 해당 아이템과 같이 사용한 증강체에 대한 요약 통계량을 제공해주는 함수, make_augment_stack 함수의 output dataframe 형태가 같다.\n",
+    "\n",
+    "\n",
+    "\n",
+    "* item_champion_crosscheck(augment) : 선택한 아이템을 기준으로, 해당 아이템과 같이 사용한 챔피언에 대한 요약 통계량을 제공해주는 함수, make_champion_stack 함수의 output dataframe 형태가 같다.\n",
+    "\n",
+    "\n",
+    "\n",
+    "* item_item_crosscheck(item) : 선택한 아이템을 기준으로, 해당 아이템과 같이 사용한 아이템에 대한 요약 통계량을 제공해주는 함수, make_item_stack 함수의 output dataframe 형태가 같다.\n",
+    "\n",
+    "\n",
+    "\n",
+    "<br/>\n",
+    "\n",
+    "* champion_summary(champion) : 해당 챔피언에 대한 일자별 요약 통계량을 제시해주는 함수, output dataframe은 다음과 같이 구성되어 있다.\n",
+    "\n",
+    "    1) Count : 해당 일자에 해당 챔피언 사용 수\n",
+    "    \n",
+    "    2) Avg_placement : 해당 일자의 해당 챔피언 사용한 플레이어의 평균 등수\n",
+    "    \n",
+    "    3) Avg_tier : 해당 일자의 해당 챔피언의 평균 성수\n",
+    "    \n",
+    "    4) Avg_save : 해당 일자의 해당 챔피언을 사용한 유저들의 평균 순방률\n",
+    "    \n",
+    "    5) Avg_winner : 해당 일자의 해당 챔피언을 사용한 유저들의 평균 승률\n",
+    "    \n",
+    "* augment_summary(augment) : 해당 증강체에 대한 일자별 요약 통계량을 제시해주는 함수, output dataframe은 다음과 같이 구성되어 있다.\n",
+    "\n",
+    "    1) Count : 해당 일자에 해당 증강체 사용 수\n",
+    "    \n",
+    "    2) Avg_placement : 해당 일자의 해당 증강체 사용한 플레이어의 평균 등수\n",
+    "    \n",
+    "    3) Avg_save : 해당 일자의 해당 증강체를 사용한 유저들의 평균 순방률\n",
+    "    \n",
+    "    4) Avg_winner : 해당 일자의 해당 증강체를 사용한 유저들의 평균 승률\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "* item_summary(champion) : 해당 챔피언에 대한 일자별 요약 통계량을 제시해주는 함수, output dataframe은 다음과 같이 구성되어 있다.\n",
+    "\n",
+    "    1) Count : 해당 일자에 해당 아이템 사용 수\n",
+    "    \n",
+    "    2) Avg_placement : 해당 일자의 해당 아이템을 사용한 플레이어의 평균 등수\n",
+    "    \n",
+    "    3) Avg_save : 해당 일자의 해당 아이템을 사용한 유저들의 평균 순방률\n",
+    "    \n",
+    "    4) Avg_winner : 해당 일자의 해당 아이템을 사용한 유저들의 평균 승률\n",
+    "    \n",
+    "    \n",
+    "<br/>\n",
+    "\n",
+    "\n",
+    "* make_augment_dictionary(augment) : 해당 증강체에 대한 일자별 요약통계량, 같이 사용한 증강체, 아이템, 챔피언에 대한 요약 통계량을 제공해주는 함수. 4개의 key(summary, augment, champion,item)을 가진 dictionary이다. \n",
+    "\n",
+    "\n",
+    "\n",
+    "* make_champion_dictionary(augment) : 해당 챔피언에 대한 일자별 요약통계량, 같이 사용한 증강체, 아이템, 챔피언에 대한 요약 통계량을 제공해주는 함수. 4개의 key(summary, augment, champion,item)을 가진 dictionary이다.\n",
+    "\n",
+    "\n",
+    "\n",
+    "* make_item_dictionary(augment) : 해당 아이템에 대한 일자별 요약통계량, 같이 사용한 증강체, 아이템, 챔피언에 대한 요약 통계량을 제공해주는 함수. 4개의 key(summary, augment, champion,item)을 가진 dictionary이다.\n",
+    "\n",
+    "\n",
+    "\n",
+    "* making_dictionary_automation : 모든 챔피언, 증강체, 아이템에 대해 일자별 요약통계량, 같이 사용한 증강체, 아이템, 챔피언에 대한 요약 통계량을 제공해주는 함수. 3개의 key(augment, champion, item)이 존재한다.\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "a06bb8dc",
+   "execution_count": null,
+   "id": "eb5ec145",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +287,6 @@
     "        self.augment_result = pd.read_csv('augment_list.csv', encoding='cp949')\n",
     "        self.champion_result = pd.read_csv('champion_list.csv', encoding='cp949')\n",
     "        self.item_result = pd.read_csv('item_list.csv', encoding='cp949')\n",
-    "        self.num_games = self.game_result.shape[0]//8        \n",
     "        self.after_join = pd.merge(self.unit_result, self.game_result[['Datetime', 'Game_id', 'Player_id', 'Placement', 'augment1', 'augment2', 'augment3']], on=['Game_id', 'Player_id', 'Datetime'])\n",
     "        self.after_join = self.after_join[['Datetime', 'Game_id', 'Player_id', 'Placement', 'augment1', 'augment2', 'augment3', 'champ_name', 'rarity', 'tier', 'item1', 'item2', 'item3']]\n",
     "\n",
@@ -69,7 +323,7 @@
     "    \n",
     "    \n",
     "    \n",
-    "    def make_augment_stack(self, game_result, augment_list, num_game):\n",
+    "    def make_augment_stack(self, game_result, augment_list):\n",
     "\n",
     "        check = game_result[['Datetime', 'Game_id', 'Player_id', 'Placement', 'augment1', 'augment2', 'augment3']].drop_duplicates()\n",
     "\n",
@@ -119,7 +373,7 @@
     "\n",
     "    \n",
     "    \n",
-    "    def make_unit_stack(self, game_result, champion_list, num_game):\n",
+    "    def make_unit_stack(self, game_result, champion_list):\n",
     "\n",
     "        result = champion_list.copy()\n",
     "\n",
@@ -215,7 +469,7 @@
     "    \n",
     "    \n",
     "    \n",
-    "    def make_item_stack(self, game_result, item_list, num_game):\n",
+    "    def make_item_stack(self, game_result, item_list):\n",
     "    \n",
     "        result = item_list.copy()\n",
     "\n",
@@ -275,9 +529,7 @@
     "\n",
     "        check = self.after_join[check]\n",
     "        \n",
-    "        num_game = len(check.Game_id.unique())\n",
-    "\n",
-    "        check_augment = self.make_augment_stack(check, self.augment_result,num_game)\n",
+    "        check_augment = self.make_augment_stack(check, self.augment_result)\n",
     "\n",
     "        return check_augment\n",
     "    \n",
@@ -288,9 +540,7 @@
     "\n",
     "        check = self.after_join[check]\n",
     "        \n",
-    "        num_game = len(check.Game_id.unique())\n",
-    "\n",
-    "        check_champion = self.make_unit_stack(check, self.champion_result, num_game)\n",
+    "        check_champion = self.make_unit_stack(check, self.champion_result)\n",
     "\n",
     "\n",
     "        return check_champion\n",
@@ -303,9 +553,7 @@
     "\n",
     "        check = self.after_join[check]\n",
     "        \n",
-    "        num_game = len(check.Game_id.unique())\n",
-    "\n",
-    "        check_item = self.make_item_stack(check, self.item_result, num_game)\n",
+    "        check_item = self.make_item_stack(check, self.item_result)\n",
     "\n",
     "        return check_item\n",
     "    \n",
@@ -319,9 +567,7 @@
     "\n",
     "        check = pd.merge(self.after_join, check, on=['Game_id', 'Player_id'])\n",
     "        \n",
-    "        num_game = len(check.Game_id.unique())\n",
-    "\n",
-    "        check_champion = self.make_unit_stack(check, self.champion_result, num_game)\n",
+    "        check_champion = self.make_unit_stack(check, self.champion_result)\n",
     "\n",
     "        return check_champion\n",
     "    \n",
@@ -334,9 +580,7 @@
     "\n",
     "        check = self.after_join[check]\n",
     "        \n",
-    "        num_game = len(check.Game_id.unique())\n",
-    "\n",
-    "        check_augment = self.make_augment_stack(check, self.augment_result, num_game)\n",
+    "        check_augment = self.make_augment_stack(check, self.augment_result)\n",
     "\n",
     "        return check_augment\n",
     "    \n",
@@ -347,9 +591,7 @@
     "\n",
     "        check = self.after_join[check]\n",
     "        \n",
-    "        num_game = len(check.Game_id.unique())\n",
-    "\n",
-    "        check_item = self.make_item_stack(check, self.item_result, num_game)\n",
+    "        check_item = self.make_item_stack(check, self.item_result)\n",
     "\n",
     "        return check_item\n",
     "    \n",
@@ -365,10 +607,8 @@
     "\n",
     "        check = self.after_join[check]\n",
     "        \n",
-    "        num_game = len(check.Game_id.unique())\n",
     "\n",
-    "\n",
-    "        check_item = self.make_item_stack(check, self.item_result, num_game)\n",
+    "        check_item = self.make_item_stack(check, self.item_result)\n",
     "\n",
     "        return check_item\n",
     "\n",
@@ -381,9 +621,7 @@
     "\n",
     "        check = self.after_join[check]\n",
     "        \n",
-    "        num_game = len(check.Game_id.unique())\n",
-    "\n",
-    "        check_augment = self.make_augment_stack(check, self.augment_result, num_game)\n",
+    "        check_augment = self.make_augment_stack(check, self.augment_result)\n",
     "\n",
     "        return check_augment\n",
     "    \n",
@@ -395,9 +633,7 @@
     "\n",
     "        check = self.after_join[check]\n",
     "        \n",
-    "        num_game = len(check.Game_id.unique())\n",
-    "\n",
-    "        check_champion = self.make_unit_stack(check, self.champion_result, num_game)\n",
+    "        check_champion = self.make_unit_stack(check, self.champion_result)\n",
     "\n",
     "        return check_champion\n",
     "    \n",
