--- a/Basic preprocessing.ipynb
+++ b/Basic preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "aaf4bbbd",
+   "id": "abb5166e",
    "metadata": {},
    "source": [
     "## 챔피언, 증강체, 아이템 요약 통계량 만들기\n",
@@ -22,6 +22,8 @@
     "    1. game_result : 해당 class 내부 함수 make_new_game_result을 통해 생성된 게임 결과 datafrmae\n",
     "    \n",
     "    2. unit_result : 해당 class 내부 함수 make_unit_result을 통해 생성된 챔피언 dataframe\n",
+    "    \n",
+    "    3. cluster_on : 덱 구분 후 덱에 대한 요약 통계량 필요 여부 확인. 필요하다면 True.\n",
     "\n",
     "\n",
     "### object 설명\n",
@@ -252,13 +254,40 @@
     "\n",
     "\n",
     "* making_dictionary_automation : 모든 챔피언, 증강체, 아이템에 대해 일자별 요약통계량, 같이 사용한 증강체, 아이템, 챔피언에 대한 요약 통계량을 제공해주는 함수. 3개의 key(augment, champion, item)이 존재한다.\n",
-    "\n"
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "<br/>\n",
+    "\n",
+    "* deck_champion_crosscheck(deck) : 해당 덱에서 사용한 챔피언에 대한 요약 통계량을 제공해주는 함수, make_champion_stack 함수의 output dataframe 형태가 같다. (cluster_on=True일 때만 사용가능)\n",
+    "\n",
+    "\n",
+    "* deck_augment_crosscheck(deck) : 해당 덱에서 사용한 챔피언에 대한 요약 통계량을 제공해주는 함수, make_champion_stack 함수의 output dataframe 형태가 같다. (cluster_on=True일 때만 사용가능)\n",
+    "\n",
+    "\n",
+    "* deck_item_crosscheck(deck) : 해당 덱에서 사용한 챔피언에 대한 요약 통계량을 제공해주는 함수, make_champion_stack 함수의 output dataframe 형태가 같다. (cluster_on=True일 때만 사용가능)\n",
+    "\n",
+    "\n",
+    "* deck_summary(deck) : 해당 덱에 대한 일자별 요약 통계량을 제시해주는 함수, output dataframe은 다음과 같이 구성되어 있다. (cluster_on=True일 때만 사용가능)\n",
+    "\n",
+    "    1) Count : 해당 일자에 해당 덱 사용 수\n",
+    "    \n",
+    "    2) Avg_placement : 해당 일자의 해당 덱을 사용한 플레이어의 평균 등수\n",
+    "    \n",
+    "    3) Avg_save : 해당 일자의 해당 덱을 사용한 유저들의 평균 순방률\n",
+    "    \n",
+    "    4) Avg_winner : 해당 일자의 해당 덱을 사용한 유저들의 평균 승률\n",
+    "    \n",
+    "\n",
+    "\n",
+    "* making_deck_dictionary(deck) : 해당 덱에 대한 일자별 요약통계량, 같이 사용한 증강체, 아이템, 챔피언에 대한 요약 통계량을 제공해주는 함수. 4개의 key(summary, augment, champion,item)을 가진 dictionary이다. (cluster_on=True일 때만 사용가능)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb5ec145",
+   "id": "8b2df11e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 1,
    "id": "87d9a625",
    "metadata": {},
    "outputs": [],
@@ -280,16 +309,23 @@
     "class basic_preprocessing:\n",
     "    \n",
     "    \n",
-    "    def __init__(self, game_result, unit_result):\n",
+    "    def __init__(self, game_result, unit_result, cluster_on = False):\n",
     "\n",
     "        self.game_result = game_result\n",
     "        self.unit_result = unit_result\n",
     "        self.augment_result = pd.read_csv('augment_list.csv', encoding='cp949')\n",
     "        self.champion_result = pd.read_csv('champion_list.csv', encoding='cp949')\n",
     "        self.item_result = pd.read_csv('item_list.csv', encoding='cp949')\n",
-    "        self.after_join = pd.merge(self.unit_result, self.game_result[['Datetime', 'Game_id', 'Player_id', 'Placement', 'augment1', 'augment2', 'augment3']], on=['Game_id', 'Player_id', 'Datetime'])\n",
-    "        self.after_join = self.after_join[['Datetime', 'Game_id', 'Player_id', 'Placement', 'augment1', 'augment2', 'augment3', 'champ_name', 'rarity', 'tier', 'item1', 'item2', 'item3']]\n",
+    "        \n",
+    "        if not cluster_on:\n",
+    "            self.after_join = pd.merge(self.unit_result, self.game_result[['Datetime', 'Game_id', 'Player_id', 'Placement', 'augment1', 'augment2', 'augment3']], on=['Game_id', 'Player_id', 'Datetime'])\n",
+    "            self.after_join = self.after_join[['Datetime', 'Game_id', 'Player_id', 'Placement', 'augment1', 'augment2', 'augment3', 'champ_name', 'rarity', 'tier', 'item1', 'item2', 'item3']]\n",
+    "        else:\n",
+    "            self.after_join = pd.merge(self.unit_result, self.game_result[['Datetime', 'Game_id', 'Player_id', 'Placement', 'augment1', 'augment2', 'augment3', 'Deck']], on=['Game_id', 'Player_id', 'Datetime'])\n",
+    "            self.after_join = self.after_join[['Datetime', 'Game_id', 'Player_id', 'Placement','Deck', 'augment1', 'augment2', 'augment3', 'champ_name', 'rarity', 'tier', 'item1', 'item2', 'item3']]\n",
     "\n",
+    "        \n",
+    "        \n",
     "\n",
     "    \n",
     "    def change_gloves_item(self):\n",
@@ -759,8 +795,77 @@
     "        \n",
     "        return final_dictionary\n",
     "        \n",
+    "\n",
     "        \n",
+    "    ###### cluster 추가\n",
     "    \n",
+    "    \n",
+    "    # 챔피언 기준 비교하기\n",
+    "    \n",
+    "    \n",
+    "    def deck_champion_crosscheck(self, deck):\n",
+    "    \n",
+    "        check = self.after_join.loc[self.after_join.Deck == deck, ['Game_id', 'Player_id']]\n",
+    "\n",
+    "        check = pd.merge(self.after_join, check, on=['Game_id', 'Player_id'])\n",
+    "        \n",
+    "        check_champion = self.make_unit_stack(check, self.champion_result)\n",
+    "\n",
+    "        return check_champion\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    def deck_augment_crosscheck(self, deck):\n",
+    "\n",
+    "        check = self.after_join.Deck==deck\n",
+    "\n",
+    "        check = self.after_join[check]\n",
+    "        \n",
+    "        check_augment = self.make_augment_stack(check, self.augment_result)\n",
+    "\n",
+    "        return check_augment\n",
+    "    \n",
+    "    \n",
+    "    def deck_item_crosscheck(self, deck):\n",
+    "    \n",
+    "        check = self.after_join.Deck==deck\n",
+    "\n",
+    "        check = self.after_join[check]\n",
+    "        \n",
+    "        check_item = self.make_item_stack(check, self.item_result)\n",
+    "\n",
+    "        return check_item\n",
+    "    \n",
+    "    \n",
+    "    def deck_summary(self, deck):\n",
+    "        \n",
+    "        check = self.after_join[self.after_join.Deck==deck].copy()\n",
+    "        \n",
+    "        check.loc[:, 'Winner'] = check.Placement==1\n",
+    "        check.loc[:, 'Save'] = check.Placement<=4\n",
+    "        \n",
+    "        check = check.groupby('Datetime')\n",
+    "        \n",
+    "        result = check.agg({'rarity' : ['count'], 'Placement' : ['mean'], 'tier' : ['mean'], 'Save' : ['mean'], 'Winner' : ['mean']})\n",
+    "        \n",
+    "        result.columns = ['Count', 'Avg_placement', 'Avg_tier', 'Avg_save', 'Avg_winner']\n",
+    "        \n",
+    "        result = result.reset_index()\n",
+    "        \n",
+    "        return result\n",
+    "    \n",
+    "    def making_deck_dictionary(self, deck):\n",
+    "        \n",
+    "        deck_summary = self.deck_summary(deck)\n",
+    "        deck_augment = self.deck_augment_crosscheck(deck)\n",
+    "        deck_champion = self.deck_champion_crosscheck(deck)\n",
+    "        deck_item = self.deck_item_crosscheck(deck)\n",
+    "        \n",
+    "        result = dict(summary = deck_summary.to_dict(), augment = deck_augment.to_dict(), champion = deck_champion.to_dict(),\n",
+    "                     item = deck_item.to_dict())\n",
+    "        \n",
+    "        return result\n",
     "    "
    ]
   },
